# new-shows-in-town

./: .gitignore  LICENSE  NewShowsInTown.slnx  README.md
.github/: copilot-instructions.md
.github/workflows/: deploy-api.yml
src/NewShowsInTown.Api/: AppDbContext.cs  NewShowsInTown.Api.csproj  NewShowsInTown.Api.http  Program.cs
src/NewShowsInTown.Api/Dtos/: CreateShowDto.cs  ShowDetailDto.cs  ShowSummaryDto.cs  UpdateShowDto.cs  VenueDto.cs
src/NewShowsInTown.Api/Endpoints/: ShowEndpoints.cs  VenueEndpoints.cs
src/NewShowsInTown.Api/Migrations/: 20260606171803_InitialCreate.Designer.cs  20260606171803_InitialCreate.cs  AppDbContextModelSnapshot.cs
src/NewShowsInTown.Api/Properties/: launchSettings.json
src/NewShowsInTown.Scraper.SalleAndreMathieu/: function_app.py  local.settings.json  main.py  pyproject.toml
src/NewShowsInTown.Shared/: Class1.cs  Show.cs  ShowTime.cs  Venue.cs
src/NewShowsInTown.Shared/Dtos/: CreateShowDto.cs  ShowDetailDto.cs  ShowSummaryDto.cs  UpdateShowDto.cs  VenueDto.cs
src/NewShowsInTown.Shared/Models/: Show.cs
src/NewShowsInTown.Web/: NewShowsInTown.Web.csproj  Program.cs  _Imports.razor
src/NewShowsInTown.Web/Pages/: Home.razor
src/NewShowsInTown.Web/Properties/: launchSettings.json
src/NewShowsInTown.Web/wwwroot/: appsettings.json  index.html
