[project]
name = "new-shows-in-town-scraper-salle-andre-mathieu"
version = "0.1.0"
description = "Scrape the website of Salle André Mathieu for shows"
requires-python = ">=3.14"
dependencies = [
    "azure-functions>=2.1.0",
    "azure-identity>=1.25.3",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
]
